# styled-output

./: .gitattributes  .markdownlint.json  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: display.rs  lib.rs  stream.rs  stream_info.rs  streams.rs  style.rs  text.rs
