[package]
name = "styled-output"
version = "0.0.1-dev"
authors = ["Martin Dickopp"]
edition = "2024"
rust-version = "1.93"
readme = "README.md"
homepage = "https://github.com/mdickopp/styled-output"
repository = "https://github.com/mdickopp/styled-output"
license = "MIT OR Apache-2.0"
publish = false

[lints.rust]
missing_crate_level_docs = "warn"
missing_docs = "warn"
private_doc_tests = "warn"

[lints.clippy]
allow_attributes = "warn"
cargo_common_metadata = "warn"
debug_assert_with_mut_call = "warn"
doc_paragraphs_missing_punctuation = "warn"
elidable_lifetime_names = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
ignored_unit_patterns = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
iter_not_returning_iterator = "warn"
iter_without_into_iter = "warn"
let_underscore_must_use = "warn"
let_underscore_untyped = "warn"
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
no_effect_underscore_binding = "warn"
option_if_let_else = "warn"
precedence_bits = "warn"
print_stderr = "deny"
print_stdout = "deny"
pub_without_shorthand = "warn"
redundant_closure_for_method_calls = "warn"
redundant_pub_crate = "warn"
return_and_then = "warn"
return_self_not_must_use = "warn"
same_name_method = "warn"
semicolon_if_nothing_returned = "warn"
semicolon_inside_block = "warn"
shadow_unrelated = "warn"
should_panic_without_expect = "warn"
struct_field_names = "warn"
too_long_first_doc_paragraph = "warn"
trivially_copy_pass_by_ref = "warn"
tuple_array_conversions = "warn"
undocumented_unsafe_blocks = "warn"
unicode_not_nfc = "warn"
unnecessary_literal_bound = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unnecessary_semicolon = "warn"
unneeded_field_pattern = "warn"
unnested_or_patterns = "warn"
unseparated_literal_suffix = "warn"
unused_result_ok = "warn"
unused_self = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
use_self = "warn"
used_underscore_binding = "warn"
used_underscore_items = "warn"
